--- a/Software/Objects/CH557.build_log.htm
+++ b/Software/Objects/CH557.build_log.htm
@@ -18,26 +18,19 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.67.0.0 
 <h2>Project:</h2>
-D:\C51_Workspace\CH557\USB\CH557.uvproj
-Project File Date:  02/05/2022
+D:\C51_Workspace\CH557\SDVX\CH557.uvproj
+Project File Date:  02/11/2022
 
 <h2>Output:</h2>
-Rebuild target 'Target 1'
+Rebuild target 'CH557'
 compiling Debug.C...
-compiling CompositeKM.C...
+compiling MouseKey.C...
+compiling HID_Main.C...
 linking...
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_CH557WDTMODESELECT?DEBUG
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_CH557WDTFEED?DEBUG
-*** WARNING L15: MULTIPLE CALL TO SEGMENT
-    SEGMENT: ?PR?PRINTF?PRINTF
-    CALLER1: ?PR?USB_DEVICEINTERRUPT?COMPOSITEKM
-    CALLER2: ?C_C51STARTUP
-Program Size: data=77.2 xdata=68 code=3624
+Program Size: data=36.0 xdata=68 code=2378
 creating hex file from ".\Objects\CH557"...
-".\Objects\CH557" - 0 Error(s), 3 Warning(s).
-Build Time Elapsed:  00:00:00
+".\Objects\CH557" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
